<resources>
    <string name="app_name">Climbing Logbook</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_logbook">Logbook</string>
    <string name="grade_conversion_icon_title">Grade conversion</string>
    <string name="arrow_back_desc">Go Back</string>
    <string name="grade_calculator_title">Grade Calculator</string>
    <string name="french_grade_system">French</string>
    <string name="kurtyka_grade_system">Kurtyka</string>
    <string name="usa_grade_system">USA</string>
    <string name="hard_toggle_desc">Hard</string>
    <string name="uiaa_grade_system">UIAA</string>
    <string name="fab_desc_add_ascent">Add ascent</string>
    <string name="add_new_ascent_title">Add new ascent</string>
    <string name="add_ascent_name">Name</string>
    <string name="add_ascent_date">Date</string>
    <string name="add_ascent_name_hint">Enter route name here</string>
    <string name="add_ascent_date_hint">Enter the ascent date</string>
    <string name="add_ascent_hard_toggle_desc">Hard</string>
    <string name="add_ascent_country_hint">Enter country</string>
    <string name="add_ascent_country">Country</string>
    <string name="add_ascent_region">Region</string>
    <string name="add_ascent_region_hint">Enter region</string>
    <string name="add_ascent_rock">Rock name</string>
    <string name="add_ascent_rock_hint">Enter rock name</string>
    <string name="add_ascent_latLng_hint">TODO</string>
    <string name="add_ascent_latLng">TODO</string>
    <string name="add_ascent_image_desc">Add photo</string>
    <string name="add_ascent_meters">Meters</string>
    <string name="add_ascent_meters_hint">Enter route length in meters</string>
    <string name="add_ascent_belayer">Belayer</string>
    <string name="add_ascent_belayer_hint">Enter belayer name</string>
    <string name="add_ascent_pitches_hint">Enter number of pitches</string>
    <string name="add_ascent_pitches">Number of pitches</string>
    <string name="add_ascent_btn_save">Save</string>
    <string name="ascent_style_onsight">Onsight</string>
    <string name="ascent_style_redpoint">Redpoint</string>
    <string name="ascent_style_flash">Flash</string>
    <string name="ascent_style_pinkpoint">Pinkpoint</string>
    <string name="ascent_style_greenpoint">Greenpoint</string>
    <string name="belay_type_lead">Lead</string>
    <string name="belay_top_rope">Top rope</string>
    <string name="belay_solo_lead">Solo lead</string>
    <string name="belay_solo_top_rope">Solo top rope</string>
    <string name="belay_free_solo">Free solo</string>
    <string name="climbing_style_sport">Sport</string>
    <string name="climbing_style_trad">Trad</string>
    <string name="climbing_style_bouldering">Bouldering</string>
    <string name="climbing_style_drytooling">Drytooling</string>
    <string name="climbing_style_mix">Mix</string>
    <string name="climbing_style_alpine">Alpine</string>
    <string name="climbing_style_ice">Ice</string>
    <string name="add_ascent_name_null_or_empty_msg">The route name must have at least one character</string>
    <string name="add_ascent_name_to_long">The route name must be less than 50 characters.</string>
    <string name="add_ascent_style">Style</string>
    <string name="add_ascent_grade_system">Grade system</string>
    <string name="add_ascent_belay_type">Belay type</string>
    <string name="add_ascent_climbing_type">Climbing type</string>
    <string name="request_camera_perm">If you want to add picture from camera, you need to accept this permission</string>
    <string name="request_read_image_perm">If you want to add your own image from gallery, you need to accept this permission</string>
    <string name="add_ascent_failed_image_load">Failed to load the image</string>
    <string name="add_ascent_date_null_msg">"You need to add the date "</string>
    <string name="add_ascent_date_from_future_msg">The date is from future</string>
    <string name="add_ascent_grade_system_null_msg">You need to pick grade system from the list</string>
    <string name="add_new_ascent_save_correct">Ascent added to logbook.</string>
    <string name="searchbar_hint">Search</string>
    <string name="logbook_sort_date">Date</string>
    <string name="logbook_sort_name">Name</string>
    <string name="logbook_sort_grade">Grade</string>
    <string name="logbook_sort_style">Style</string>
    <string name="logbook_sort_meters">Length</string>
    <string name="logbook_no_records_in_db">No saved ascents in the logbook</string>
    <string name="add_ascent_ascent_style_null_msg">You need to pick ascent style from the list</string>
    <string name="add_ascent_ascent_style_error_usa_conv">Fail with grade conversion. Try again.</string>
    <string name="logbook_ascent_deleted">Ascent deleted from your logbook.</string>
    <string name="ascent_display_image_desc">Ascent image</string>
    <string name="logbook_filter_os">OS</string>
    <string name="logbook_filter_rp">RP</string>
    <string name="logbook_filter_flash">Flash</string>
    <string name="logbook_filter_trad">Trad</string>
    <string name="logbook_filter_sport">Sport</string>
    <string name="logbook_filter_none">None</string>
    <string name="home_saved_routes">All</string>
    <string name="home_sport_routes">Sport</string>
    <string name="home_trad_routes">Trad</string>
    <string name="home_last_three_ascents">Last ascents</string>
    <string name="home_main_stats_header">Your ascents</string>
    <string name="home_second_stats_onsight_desc">On-sight</string>
    <string name="home_second_stats_redpoint_desc">Redpoint</string>
    <string name="home_second_stats_flash_desc">Flash</string>
    <string name="add_ascent_ascent_style_error_grade_ordinal">Error with picking grade. Try again</string>
    <string name="add_ascent_ascent_style_error_to_long_or_empty_text">To long or empty field</string>

</resources>