<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMainStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_last_three_ascents"
        android:textAlignment="center"
        android:textSize="@dimen/home_text_size_main_headers"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <LinearLayout
        android:id="@+id/llCircles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMainStats">

        <LinearLayout
            android:id="@+id/llTradRoutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tvTradRoutesInDb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_home"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/home_text_size_main_stats_num"
                tools:text="15000" />

            <TextView
                android:id="@+id/tvTradRoutesInDbDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_trad_routes"
                android:textAlignment="center"
                android:textSize="@dimen/home_text_size_main_stats_desc" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSavedRoutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRoutesInDb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_home"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/home_text_size_main_stats_num"
                tools:text="15000" />

            <TextView
                android:id="@+id/tvRoutesInDbDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_saved_routes"
                android:textAlignment="center"
                android:textSize="@dimen/home_text_size_main_stats_desc" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSportRoutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tvSportRoutesInDb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_home"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/home_text_size_main_stats_num"
                tools:text="15000" />

            <TextView
                android:id="@+id/tvSportRoutesInDbDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_sport_routes"
                android:textAlignment="center"
                android:textSize="@dimen/home_text_size_main_stats_desc" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tvLastThreeAscents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_last_three_ascents"
        android:textAlignment="center"
        android:textSize="@dimen/home_text_size_main_headers"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/llCircles"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAscents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLastThreeAscents" />


</androidx.constraintlayout.widget.ConstraintLayout>